--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,7 +15,40 @@
 
         <!--Logo-->
         <ImageView
+            android:layout_gravity="center_horizontal"
             android:src="@drawable/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <!--Email-->
+<EditText
+    android:inputType="textEmailAddress"
+    android:hint="Email :"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
+
+        <!--Password-->
+        <EditText
+            android:inputType="textPassword"
+            android:hint="Password :"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <!--Login-->
+        <Button
+            android:layout_gravity="center_horizontal"
+            android:text="Login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <!--Button-->
+        <EditText
+            android:id="@+id/txtRegister"
+            android:clickable="true"
+            android:layout_marginTop="10dp"
+            android:textSize="@dimen/h2"
+            android:layout_gravity="center_horizontal"
+            android:text="Register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
